[package]
name = "duel_game"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"         # Génération aléatoire
crossterm = "0.27"   # Gestion clavier
clap = { version = "4.4", features = ["derive"] } # Arguments CLI
log = "0.4"         # Système de logs
env_logger = "0.10" # Permet d'afficher les logs selon le niveau
